added new patch endpoints
