# core/src/main/java/org/example/core/controller/CartController.java
@@ -26,9 +26,19 @@ public class CartController implements CartApi {
     }
 
     @Override
+    public void removeDiscountFromCart(Long cartId, String code) {
+        cartService.removeDiscountFromCartWithId(cartId, code);
+    }
+
+    @Override
     public void addProductToCart(Long cartId, ProductItemDTO productItemDTO) {
         ProductItemDto productItem = productItemDtoMapper.toDto(productItemDTO);
         cartService.addProductToCartWithId(cartId, productItem);
+    }
+
+    @Override
+    public void removeProductFromCart(Long cartId, Long productId) {
+        cartService.removeProductFromCartWithId(cartId, productId);
     }
 
     @Override
